--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -1,4 +1,4 @@
-<div class="col-9 main-content" style="border-radius: 10px;">
+<div class="main-content" style="border-radius: 10px;">
         <p class="text-center" style="font-size: x-large; font-weight: bolder;">
             <span th:text="${group.groupName}"></span>
                 <span class="float-end">
