--- a/ProjectManagement/src/main/resources/templates/menu_bar_student.html
+++ b/ProjectManagement/src/main/resources/templates/menu_bar_student.html
@@ -1,10 +1,12 @@
-<div class="profile">
-    <img src="/usericon.png" alt="Profile Picture">
-    <div>
-        <div class="student" th:text="${session.username}"> </div>
-        <div th:text="${session.firstName} + ' ' + ${session.lastName}"> </div>
+<a href="/profile" class="profile-link">
+    <div class="profile">
+        <img src="/usericon.png" alt="Profile Picture">
+        <div>
+            <div class="student" th:text="${session.username}"></div>
+            <div th:text="${session.firstName} + ' ' + ${session.lastName}"></div>
+        </div>
     </div>
-</div>
+</a>
 <div class="notification">
     <button type="button" class="notification-button" onclick="toggleNomenu_bar_studenttifications()">
         <i class="fas fa-bell"></i>
