--- a/ProjectManagement/src/main/resources/templates/mygroup.html
+++ b/ProjectManagement/src/main/resources/templates/mygroup.html
@@ -14,6 +14,7 @@
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
     <link href="/styles.css" rel="stylesheet"  type="text/css">
+    <title>My Group</title>
     <style>
         .btn-group {
             display: inline-block;
