--- a/ProjectManagement/src/main/resources/static/styles.css
+++ b/ProjectManagement/src/main/resources/static/styles.css
@@ -158,6 +158,7 @@ body {
     padding: 20px;
     background: rgba(255, 255, 255, 0.9);
     margin: 15px;
+    border-radius: 10px;
 }
 .input{
     height: 50px;
